<resources>
    <string name="app_name">SatelliteChat</string>
    <string name="app_author">NGUYỄN VIÊN</string>
    <string name="label_sign_in">Sign in to Satellite</string>
    <string name="label_sign_up">Register an account to Satellite</string>
    <string name="label_sign_in_with_email_password">Or log in with your email and password:</string>
    <string name="label_sign_up_with_email_password">Or register with your email and password:</string>
    <string name="label_username">Username</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm new password</string>
    <string name="label_btn_sign_in">Sign In</string>
    <string name="label_btn_sign_up">Sign Up</string>
    <string name="policy_terms">Your continued use of this application means that you agree to <b>Terms</b>  our.</string>
    <string name="label_forget_password">Forgot password?</string>
    <string name="label_sign_out">Sign out</string>
    <string name="facebook_app_id">883005992841830</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">5db479d6c44f7df0416d0b26ec57dbdb</string>
    <string name="logo_description">Logo application</string>
    <string name="logo_google">Logo_google</string>
    <string name="logo_facebook">Logo facebook</string>
    <string name="remember_me">Remember me</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="menu">menu</string>
    <string name="chat_part">Chats</string>
    <string name="set_the_status">Set the status</string>
    <string name="avatar">Avatar</string>
    <string name="marketplace">Marketplace</string>
    <string name="waiting_message">Message requests</string>
    <string name="archives">Archive</string>
    <string name="community">Communities</string>
    <string name="label_edit">EDIT</string>
    <string name="arrow_down">arrow down</string>
    <string name="icon_user">icon_user</string>
    <string name="set_state">Leave a note</string>
    <string name="set_custom_state">Set custom status</string>
    <string name="dark_mode">Dark mode</string>
    <string name="active_status">Active status</string>
    <string name="username">User name</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="custom">Option</string>
    <string name="privacy_and_safety">Privacy and safety</string>
    <string name="notification_sound"><![CDATA[Notifications & sounds]]></string>
    <string name="photos_media_files"><![CDATA[Photo & media files]]></string>
    <string name="sms">SMS</string>
    <string name="me">Me</string>
    <string name="icon_back">icon back</string>
    <string name="icon">icon</string>
    <string name="chat_bubble">Chat Bubbles</string>
    <string name="safe">Safe</string>
    <string name="account_transfer">Account transfer</string>
    <string name="report_problem">Report problem</string>
    <string name="help">Help</string>
    <string name="calls">Calls</string>
    <string name="news">Stories</string>
    <string name="switch_account">Account transfer</string>
    <string name="maximum_5_switch_account">You can add up to 5 accounts on this device as well as switch from one account to another and view messages.</string>
    <string name="tick">tick</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="no_message">No message</string>
    <string name="temp_time">00:00</string>
    <string name="add_account">Add account</string>
    <string name="icon_fb">icon_fb</string>
    <string name="icon_gg">icon_gg</string>
    <string name="description_save_avatar">The system will update your profile picture on your personal page. This update will not be shared in the feed.</string>
    <string name="label_avatar">Avatar</string>
    <string name="save_avatar">Save Avatar</string>
    <string name="loading">Loading...</string>
    <string name="logged">Logged</string>
    <string name="texting">Nhắn tin...</string>
    <string name="calling">Calling...</string>
    <string name="audio_call_from_satellitechat">Audio call from SatelliteChat</string>
    <string name="reply">REPLY</string>
    <string name="answer">ANSWER</string>
    <string name="decline">DECLINE</string>
    <string name="call_notification">Có cuộc gọi đến từ SatelliteChat</string>
    <string name="call_back">CALL BACK</string>
    <string name="_1_45_am">1:45 AM</string>
    <string name="audio_call">Audio Call</string>
    <string name="video_call">Video Call</string>
    <string name="emoji_icon_text">😁😁</string>
    <string name="label_messages">Messages</string>
    <string name="label_requests">Requests</string>
    <string name="post_status_label">Share</string>
    <string name="share_thinking_hint">Share a thought...</string>
    <string name="post_permissions_label_friend_follow">Share with <b>Followers you follow back</b></string>
    <string name="label_friend_follow">Followers you follow back</string>
    <string name="label_share_public">Share with public</string>
    <string name="post_permissions_label_public">Share with <b>Public</b></string>
    <string name="max_length_post_status_label">60/60</string>
    <string name="done_label">Done</string>
    <string name="share_with_label">Share with</string>
    <string name="cancel_label">Cancel</string>
    <string name="label_leave_a_new_note">Leave a new note</string>
    <string name="label_delete_note">Delete note</string>
    <string name="label_share_with_close_friend">Share with close friend</string>
    <string name="your_re_friends_on_satellitechat">You\'re friends on SatelliteChat</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="label_suggestions">Suggestions</string>
    <string name="label_your_friends">Your Friends</string>
    <string name="label_suggestion_requests">Suggestion requests</string>
    <string name="label_see_all">See all</string>
    <string name="label_recents">Recents</string>
    <string name="label_posts">Posts</string>
    <string name="label_share_profile">Share profile</string>
    <string name="label_edit_profile">Edit profile</string>
    <string name="label_following">Following</string>
    <string name="label_friend_requests">Friend requests</string>
    <string name="label_suggested_friend">Suggested friend</string>
    <string name="label_remove">Remove</string>
    <string name="label_add_friend">Add Friend</string>
    <string name="label_cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>