<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_bottom_status_view"
    android:orientation="vertical">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/icon"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_round_remove_24" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageUserPostedStatus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/username"
        android:padding="2dp"
        android:src="@drawable/avatar"
        app:shapeAppearanceOverlay="@style/Circular" />

    <TextView
        android:id="@+id/contentDialogStatusView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLength="60"
        android:text="@string/lorem_ipsum"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/btnShareWithFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/label_share_with_close_friend"
            android:textColor="@color/black_400"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|center"
            android:layout_marginTop="1dp"
            android:src="@drawable/icon_right_arrow"
            tools:ignore="RtlHardcoded"
            android:contentDescription="@string/icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/btnLeaveANewNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_btn_8dp_bg_color_blue"
        android:padding="12dp"
        android:text="@string/label_leave_a_new_note"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:padding="12dp"
        android:text="@string/label_delete_note"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>