<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="14dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageUserSwitch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/username"
            android:src="@drawable/avatar"
            app:shapeAppearanceOverlay="@style/Circular"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="14dp"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:id="@+id/userNameSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_bold"
                    android:text="@string/app_author"
                    android:paddingBottom="2dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:text="@string/logged"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/icon_tick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="14dp"
                android:src="@drawable/icon_done"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/tick" />

        </RelativeLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>