<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".activity.authentication.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_main"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/be_vietnam_bold"
                android:text="@string/label_sign_in"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp">

                <ImageView
                    android:id="@+id/btnSignInGg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/border_social"
                    android:padding="10dp"
                    android:src="@drawable/google" />

                <ImageView
                    android:id="@+id/btnSignInFb"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/border_social"
                    android:padding="10dp"
                    android:radius="50dp"
                    android:src="@drawable/facebook" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/be_vietnam_light"
                android:text="@string/label_sign_in_with_email_password"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/border_input"
                android:fontFamily="@font/be_vietnam_bold"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/border_input"
                    android:fontFamily="@font/be_vietnam_bold"
                    android:hint="@string/label_password"
                    android:inputType="textPassword"
                    android:padding="14dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/be_vietnam"
                    android:gravity="center"
                    android:text="@string/remember_me" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/be_vietnam_bold"
                    android:text="@string/label_forget_password"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_btn_sign_in"
                android:fontFamily="@font/be_vietnam_bold"
                android:padding="14dp"
                android:text="@string/label_btn_sign_in"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_btn_sign_up"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <TextView
                android:id="@+id/policy_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/policy_terms"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>